# traderj-py

./: .bkit-memory.json  .dockerignore  .env.example  .gitignore  CLAUDE.md  HANDOFF.md  Makefile  PLAN-B-DEPLOYMENT.md  alert_rules.yml  docker-compose.dev.yml  docker-compose.yml  fly.toml  mypy.ini  prometheus.yml  ruff.toml
api/: Dockerfile  __init__.py  deps.py  ipc_client.py  main.py  openapi-draft.yaml  pyproject.toml
api/middleware/: auth.py  metrics.py  security.py
api/routes/: analytics.py  backtest.py  balance.py  bots.py  candles.py  config.py  control.py  engine.py  health.py  macro.py  orders.py  passkeys.py  pnl.py  positions.py  risk.py  signals.py  tuning.py  version.py  wizard.py
api/schemas/: responses.py
api/ws/: channels.py  handler.py  manager.py
engine/: Dockerfile  __init__.py  __main__.py  app.py  bootstrap.py  metrics.py  pyproject.toml
engine/backtest/: __init__.py  analyzer.py  candle_cache.py  job_manager.py  runners.py  schemas.py  validators.py
engine/config/: settings.py
engine/data/: __init__.py  macro.py  ohlcv.py  postgres_store.py  sqlite_store.py
engine/exchange/: rate_limiter.py  upbit_client.py  upbit_ws.py
engine/execution/: circuit_breaker.py  order_manager.py  position_manager.py  risk_manager.py
engine/loop/: event_bus.py  ipc_server.py  scheduler.py  state.py  trading_loop.py
engine/notification/: __init__.py  telegram.py
engine/strategy/: dca.py  filters.py  grid.py  indicators.py  mtf.py  normalizer.py  preset_override.py  presets.py  regime.py  regime_config.py  regime_switch.py  risk.py  scoring.py  signal.py  tiered_exit.py
engine/tuner/: __init__.py  applier.py  config.py  degraded.py  enums.py  evaluator.py  guardrails.py  (+8 more)
shared/: __init__.py  enums.py  events.py  logging_config.py  models.py  protocols.py  pyproject.toml
(+234 files in other folders)
