[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traderj-shared"
version = "0.1.0"
description = "Shared models, events, protocols, and enums for traderj"
requires-python = ">=3.13"
dependencies = []

[tool.setuptools.packages.find]
include = ["shared*"]
